--- a/index.html
+++ b/index.html
@@ -3,21 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Run Python on GitHub Pages</title>
+    <title>Python Runner - GitHub Pages</title>
     <script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        textarea { width: 100%; height: 200px; }
-        button { margin-top: 10px; }
-        pre { background: #f4f4f4; padding: 10px; border-radius: 5px; }
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #6a11cb, #2575fc);
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+        }
+        textarea {
+            width: 100%;
+            height: 200px;
+            border-radius: 5px;
+            border: none;
+            padding: 10px;
+            font-size: 14px;
+            background: #333;
+            color: white;
+        }
+        button {
+            background: #ff9800;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        button:hover {
+            background: #e68900;
+        }
+        pre {
+            background: #222;
+            padding: 15px;
+            border-radius: 5px;
+            text-align: left;
+            overflow-x: auto;
+        }
     </style>
 </head>
 <body>
-    <h1>Run Python Code in the Browser</h1>
-    <p>Paste the contents of <code>PaperAirResistance.py</code> or <code>PaperAirResistanceQuantumEdition.py</code> below and execute it.</p>
-    <textarea id="pythonCode"># Paste your Python code here</textarea>
-    <button onclick="runPython()">Run Code</button>
-    <pre id="output"></pre>
+    <div class="container">
+        <h1>Run Python Code in the Browser</h1>
+        <p>Paste the contents of <code>PaperAirResistance.py</code> or <code>PaperAirResistanceQuantumEdition.py</code> below and execute it.</p>
+        <textarea id="pythonCode"># Paste your Python code here</textarea>
+        <br>
+        <button onclick="runPython()">Run Code</button>
+        <pre id="output"></pre>
+    </div>
 
     <script>
         async function runPython() {
